XWIKI-22571: Backlinks update changes an absolute reference to the moved page into one relative to the current wiki
  * Use default serializer if the wiki is present in a link, not the
    compact serializer
  * Provide unit test and integration test to cover this