@@ -19,8 +19,6 @@
  */
 package org.xwiki.refactoring.internal;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -115,6 +113,9 @@ class DefaultReferenceUpdaterTest
     @MockComponent
     @Named("compact")
     private EntityReferenceSerializer<String> compactEntityReferenceSerializer;
+
+    @MockComponent
+    private EntityReferenceSerializer<String> defaultEntityReferenceSerializer;
 
     @MockComponent
     private DocumentReferenceResolver<EntityReference> defaultReferenceDocumentReferenceResolver;
@@ -220,7 +221,7 @@ class DefaultReferenceUpdaterTest
             .thenReturn(new ObjectPropertyReference("area", new ObjectReference("areaobject", documentReference)));
 
         when(document.getXObjects())
-            .thenReturn(Collections.singletonMap(documentReference, Collections.singletonList(baseObject)));
+            .thenReturn(Map.of(documentReference, List.of(baseObject)));
 
         when(this.contentParser.parse("areacontent", Syntax.XWIKI_2_1, documentReference)).thenReturn(xdom);
     }
@@ -242,32 +243,40 @@ class DefaultReferenceUpdaterTest
 
         // Setup document content
         ResourceReference docLinkReference = new ResourceReference("C", ResourceType.DOCUMENT);
-        LinkBlock docLinkBlock = new LinkBlock(Collections.emptyList(), docLinkReference, false);
+        LinkBlock docLinkBlock = new LinkBlock(List.of(), docLinkReference, false);
         ResourceReference spaceLinkReference = new ResourceReference("Z", ResourceType.SPACE);
-        LinkBlock spaceLinkBlock = new LinkBlock(Collections.emptyList(), spaceLinkReference, false);
+        LinkBlock spaceLinkBlock = new LinkBlock(List.of(), spaceLinkReference, false);
         ResourceReference imageReference = new AttachmentResourceReference("attachment.txt");
         ImageBlock imageBlock = new ImageBlock(imageReference, false);
+        ResourceReference absoluteDocLinkResourceReference = new ResourceReference("xwiki:C.WebHome",
+            ResourceType.DOCUMENT);
+        LinkBlock absoluteDocLinkBlock =
+            new LinkBlock(List.of(), absoluteDocLinkResourceReference, false);
         when(newDocument.getXDOM())
-            .thenReturn(new XDOM(Arrays.asList(docLinkBlock, spaceLinkBlock, imageBlock)));
+            .thenReturn(new XDOM(List.of(docLinkBlock, spaceLinkBlock, imageBlock, absoluteDocLinkBlock)));
 
         // Setup object content
         ResourceReference xobjectDocLinkReference = new ResourceReference("C", ResourceType.DOCUMENT);
-        LinkBlock xobjectDocLinkBlock = new LinkBlock(Collections.emptyList(), xobjectDocLinkReference, false);
+        LinkBlock xobjectDocLinkBlock = new LinkBlock(List.of(), xobjectDocLinkReference, false);
         ResourceReference xobjectSpaceLinkReference = new ResourceReference("Z", ResourceType.SPACE);
         LinkBlock xobjectSpaceLinkBlock =
-            new LinkBlock(Collections.emptyList(), xobjectSpaceLinkReference, false);
+            new LinkBlock(List.of(), xobjectSpaceLinkReference, false);
         ResourceReference xobjectImageReference = new AttachmentResourceReference("attachment.txt");
         ImageBlock xobjectImageBlock = new ImageBlock(xobjectImageReference, false);
         setTextarea(newDocument,
-            new XDOM(Arrays.asList(xobjectDocLinkBlock, xobjectSpaceLinkBlock, xobjectImageBlock)));
+            new XDOM(List.of(xobjectDocLinkBlock, xobjectSpaceLinkBlock, xobjectImageBlock)));
 
         DocumentReference originalDocLinkReference = new DocumentReference("WebHome",
             new SpaceReference("C", oldReference.getLastSpaceReference()));
         DocumentReference absoluteDocLinkReference = new DocumentReference("WebHome", new SpaceReference("wiki", "C"));
         when(this.resourceReferenceResolver.resolve(docLinkReference, null))
             .thenReturn(absoluteDocLinkReference);
+        when(this.resourceReferenceResolver.resolve(absoluteDocLinkResourceReference, null))
+            .thenReturn(absoluteDocLinkReference);
         when(this.resourceReferenceResolver.resolve(docLinkReference, null, oldReference))
             .thenReturn(originalDocLinkReference);
+        when(this.resourceReferenceResolver.resolve(absoluteDocLinkResourceReference, null, oldReference))
+            .thenReturn(absoluteDocLinkReference);
         when(this.resourceReferenceResolver.resolve(xobjectDocLinkReference, null))
             .thenReturn(absoluteDocLinkReference);
         when(this.resourceReferenceResolver.resolve(xobjectDocLinkReference, null, oldReference))
@@ -284,6 +293,8 @@ class DefaultReferenceUpdaterTest
             .thenReturn(newDocLinkReference);
         when(this.resourceReferenceResolver.resolve(imageReference, null, newReference))
             .thenReturn(newImageTargetAttachment);
+        when(this.resourceReferenceResolver.resolve(absoluteDocLinkResourceReference, null, newReference))
+            .thenReturn(new DocumentReference("WebHome", new SpaceReference("wiki", "E")));
 
         SpaceReference originalSpaceReference = new SpaceReference("wiki", "Z");
         when(this.resourceReferenceResolver.resolve(spaceLinkReference, null))
@@ -300,12 +311,16 @@ class DefaultReferenceUpdaterTest
             .thenReturn(originalSpaceReference);
 
         when(this.compactEntityReferenceSerializer.serialize(originalDocLinkReference, newReference)).thenReturn("A.C");
+        when(this.defaultEntityReferenceSerializer.serialize(absoluteDocLinkReference, newReference))
+            .thenReturn("wiki:C.WebHome");
 
         updater.update(newReference, oldReference, newReference);
 
         // Document link block is updated.
         assertEquals("A.C", docLinkBlock.getReference().getReference());
         assertEquals(ResourceType.DOCUMENT, docLinkBlock.getReference().getType());
+        assertEquals("wiki:C.WebHome", absoluteDocLinkBlock.getReference().getReference());
+        assertEquals(ResourceType.DOCUMENT, absoluteDocLinkBlock.getReference().getType());
         // Space link block stays the same, since they were on the same wiki.
         assertEquals("Z", spaceLinkBlock.getReference().getReference());
         assertEquals(ResourceType.SPACE, spaceLinkBlock.getReference().getType());
@@ -339,13 +354,13 @@ class DefaultReferenceUpdaterTest
         when(newDocument.getXDOM()).thenReturn(xdom);
 
         ResourceReference docLinkReference = new ResourceReference("C", ResourceType.DOCUMENT);
-        LinkBlock docLinkBlock = new LinkBlock(Collections.emptyList(), docLinkReference, false);
+        LinkBlock docLinkBlock = new LinkBlock(List.of(), docLinkReference, false);
 
         ResourceReference spaceLinkReference = new ResourceReference("Z", ResourceType.SPACE);
-        LinkBlock spaceLinkBlock = new LinkBlock(Collections.emptyList(), spaceLinkReference, false);
+        LinkBlock spaceLinkBlock = new LinkBlock(List.of(), spaceLinkReference, false);
 
         when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
-            .thenReturn(Arrays.asList(docLinkBlock, spaceLinkBlock));
+            .thenReturn(List.of(docLinkBlock, spaceLinkBlock));
 
         DocumentReference originalDocLinkReference = new DocumentReference("C", oldReference.getLastSpaceReference());
         DocumentReference absoluteDocLinkReference = new DocumentReference("C", new SpaceReference("xwiki", "Main"));
@@ -396,18 +411,23 @@ class DefaultReferenceUpdaterTest
 
         // Setup document content
         ResourceReference linkReference = new ResourceReference("A.B", ResourceType.DOCUMENT);
-        LinkBlock linkBlock = new LinkBlock(Collections.emptyList(), linkReference, false);
-        XDOM xdom = new XDOM(Collections.singletonList(linkBlock));
+        LinkBlock linkBlock = new LinkBlock(List.of(), linkReference, false);
+        ResourceReference absoluteLinkReference = new ResourceReference("xwiki:A.B.WebHome", ResourceType.DOCUMENT);
+        LinkBlock absoluteLinkBlock = new LinkBlock(List.of(), absoluteLinkReference, false);
+        XDOM xdom = new XDOM(List.of(linkBlock, absoluteLinkBlock));
         when(document.getXDOM()).thenReturn(xdom);
 
         // Setup object content
         ResourceReference xobjectLinkReference = new ResourceReference("A.B", ResourceType.DOCUMENT);
-        LinkBlock xobjectLinkBlock = new LinkBlock(Collections.emptyList(), xobjectLinkReference, false);
-        XDOM xobjectXDOM = new XDOM(Collections.singletonList(xobjectLinkBlock));
+        LinkBlock xobjectLinkBlock = new LinkBlock(List.of(), xobjectLinkReference, false);
+        XDOM xobjectXDOM = new XDOM(List.of(xobjectLinkBlock));
         setTextarea(document, xobjectXDOM);
 
         when(this.resourceReferenceResolver.resolve(linkReference, null)).thenReturn(oldLinkTarget);
         when(this.resourceReferenceResolver.resolve(linkReference, null, documentReference)).thenReturn(oldLinkTarget);
+        when(this.resourceReferenceResolver.resolve(absoluteLinkReference, null)).thenReturn(oldLinkTarget);
+        when(this.resourceReferenceResolver.resolve(absoluteLinkReference, null, documentReference))
+            .thenReturn(oldLinkTarget);
         when(this.resourceReferenceResolver.resolve(xobjectLinkReference, null))
             .thenReturn(oldLinkTarget);
         when(this.resourceReferenceResolver.resolve(xobjectLinkReference, null, documentReference))
@@ -415,10 +435,13 @@ class DefaultReferenceUpdaterTest
         when(this.defaultReferenceDocumentReferenceResolver.resolve(oldLinkTarget)).thenReturn(oldLinkTarget);
 
         when(this.compactEntityReferenceSerializer.serialize(newLinkTarget, documentReference)).thenReturn("X.Y");
+        when(this.defaultEntityReferenceSerializer.serialize(newLinkTarget, documentReference))
+            .thenReturn("xwiki:X.Y.WebHome");
 
         updater.update(documentReference, oldLinkTarget, newLinkTarget);
 
         assertEquals("X.Y", linkBlock.getReference().getReference());
+        assertEquals("xwiki:X.Y.WebHome", absoluteLinkBlock.getReference().getReference());
         assertEquals("X.Y", xobjectLinkBlock.getReference().getReference());
         assertEquals(ResourceType.DOCUMENT, linkBlock.getReference().getType());
         verifyDocumentSave(document, "Renamed back-links.", false, false);
@@ -444,7 +467,7 @@ class DefaultReferenceUpdaterTest
 
         ResourceReference imageReference = new AttachmentResourceReference("A.B@attachment.txt");
         ImageBlock imageBlock = new ImageBlock(imageReference, false);
-        when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).thenReturn(Arrays.asList(imageBlock));
+        when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).thenReturn(List.of(imageBlock));
 
         when(this.resourceReferenceResolver.resolve(imageReference, null)).thenReturn(oldImageTargetAttachment);
         when(this.resourceReferenceResolver.resolve(imageReference, null, documentReference))
@@ -481,8 +504,8 @@ class DefaultReferenceUpdaterTest
         when(document.getXDOM()).thenReturn(xdom);
 
         ResourceReference linkReference = new AttachmentResourceReference("A.B@attachment.txt");
-        LinkBlock linkBlock = new LinkBlock(Collections.emptyList(), linkReference, false);
-        when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).thenReturn(Arrays.asList(linkBlock));
+        LinkBlock linkBlock = new LinkBlock(List.of(), linkReference, false);
+        when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).thenReturn(List.of(linkBlock));
 
         when(this.resourceReferenceResolver.resolve(linkReference, null))
             .thenReturn(oldLinkTargetAttachment);
@@ -517,13 +540,13 @@ class DefaultReferenceUpdaterTest
         when(document.getXDOM()).thenReturn(xdom);
 
         ResourceReference docLinkReference = new ResourceReference("A.WebHome", ResourceType.DOCUMENT);
-        LinkBlock documentLinkBlock = new LinkBlock(Collections.emptyList(), docLinkReference, false);
+        LinkBlock documentLinkBlock = new LinkBlock(List.of(), docLinkReference, false);
 
         ResourceReference spaceLinkReference = new ResourceReference("A", ResourceType.SPACE);
-        LinkBlock spaceLinkBlock = new LinkBlock(Collections.emptyList(), spaceLinkReference, false);
+        LinkBlock spaceLinkBlock = new LinkBlock(List.of(), spaceLinkReference, false);
 
         when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
-            .thenReturn(Arrays.asList(documentLinkBlock, spaceLinkBlock));
+            .thenReturn(List.of(documentLinkBlock, spaceLinkBlock));
 
         // Doc link
         when(this.resourceReferenceResolver.resolve(docLinkReference, null))
@@ -569,13 +592,13 @@ class DefaultReferenceUpdaterTest
         when(document.getXDOM()).thenReturn(xdom);
 
         ResourceReference docLinkReference = new ResourceReference("A.WebHome", ResourceType.DOCUMENT);
-        LinkBlock documentLinkBlock = new LinkBlock(Collections.emptyList(), docLinkReference, false);
+        LinkBlock documentLinkBlock = new LinkBlock(List.of(), docLinkReference, false);
 
         ResourceReference spaceLinkReference = new ResourceReference("A", ResourceType.SPACE);
-        LinkBlock spaceLinkBlock = new LinkBlock(Collections.emptyList(), spaceLinkReference, false);
+        LinkBlock spaceLinkBlock = new LinkBlock(List.of(), spaceLinkReference, false);
 
         when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
-            .thenReturn(Arrays.asList(documentLinkBlock, spaceLinkBlock));
+            .thenReturn(List.of(documentLinkBlock, spaceLinkBlock));
 
         // Doc link
         when(this.resourceReferenceResolver.resolve(docLinkReference, null))
@@ -638,7 +661,7 @@ class DefaultReferenceUpdaterTest
         displayMacroBlock.setParent(xdom);
 
         when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
-            .thenReturn(Arrays.asList(includeMacroBlock1, includeMacroBlock2, displayMacroBlock));
+            .thenReturn(List.of(includeMacroBlock1, includeMacroBlock2, displayMacroBlock));
 
         ResourceReference macroResourceReference = new ResourceReference("A.B", ResourceType.DOCUMENT);
 
@@ -680,7 +703,7 @@ class DefaultReferenceUpdaterTest
         DocumentReference targetDocument = new DocumentReference("wiki", "Space", "Target");
         AttachmentReference newLinkTarget = new AttachmentReference("newname.txt", targetDocument);
         ResourceReference resourceReference = new ResourceReference("oldname.txt", ResourceType.ATTACHMENT);
-        LinkBlock documentLinkBlock = new LinkBlock(Collections.emptyList(), resourceReference, false);
+        LinkBlock documentLinkBlock = new LinkBlock(List.of(), resourceReference, false);
 
         XWikiDocument document = mock(XWikiDocument.class);
         XDOM xdom = mock(XDOM.class);
@@ -734,10 +757,10 @@ class DefaultReferenceUpdaterTest
         MacroBlock includeMacroBlock = new MacroBlock("include", includeParameters, false);
 
         ResourceReference resourceReference = new ResourceReference("A.B", ResourceType.DOCUMENT);
-        LinkBlock documentLinkBlock = new LinkBlock(Collections.emptyList(), resourceReference, false);
+        LinkBlock documentLinkBlock = new LinkBlock(List.of(), resourceReference, false);
 
         when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT)))
-            .thenReturn(Arrays.asList(includeMacroBlock, documentLinkBlock));
+            .thenReturn(List.of(includeMacroBlock, documentLinkBlock));
 
         when(this.resourceReferenceResolver.resolve(resourceReference, null))
             .thenReturn(oldLinkTarget);
@@ -784,7 +807,7 @@ class DefaultReferenceUpdaterTest
         when(this.xcontext.getWiki().getDocument(baseDocumentReference, this.xcontext)).thenReturn(baseDocument);
         when(baseDocument.getDocumentReference()).thenReturn(baseDocumentReference);
 
-        when(baseDocument.getTranslationLocales(xcontext)).thenReturn(Arrays.asList(Locale.FRENCH, Locale.ENGLISH));
+        when(baseDocument.getTranslationLocales(xcontext)).thenReturn(List.of(Locale.FRENCH, Locale.ENGLISH));
         DocumentReference frenchDocumentReference = new DocumentReference("wiki", "Space", "Page", Locale.FRENCH);
         XWikiDocument frenchDocument = mock(XWikiDocument.class);
         when(baseDocument.getTranslatedDocument(Locale.FRENCH, xcontext)).thenReturn(frenchDocument);
@@ -799,7 +822,7 @@ class DefaultReferenceUpdaterTest
         DocumentReference oldLinkTarget = new DocumentReference("wiki", "A", "B");
         DocumentReference newLinkTarget = new DocumentReference("wiki", "X", "Y");
 
-        List<XWikiDocument> documentsToUpdate = Arrays.asList(baseDocument, frenchDocument, englishDocument);
+        List<XWikiDocument> documentsToUpdate = List.of(baseDocument, frenchDocument, englishDocument);
 
         for (XWikiDocument xWikiDocument : documentsToUpdate) {
             DocumentReference documentReference = xWikiDocument.getDocumentReference();
@@ -808,7 +831,7 @@ class DefaultReferenceUpdaterTest
             when(xWikiDocument.getXDOM()).thenReturn(xdom);
 
             ResourceReference linkReference = new ResourceReference("A.B", ResourceType.DOCUMENT);
-            LinkBlock linkBlock = new LinkBlock(Collections.emptyList(), linkReference, false);
+            LinkBlock linkBlock = new LinkBlock(List.of(), linkReference, false);
             when(xdom.getBlocks(any(), eq(Block.Axes.DESCENDANT))).thenReturn(List.of(linkBlock));
 
             when(this.resourceReferenceResolver.resolve(linkReference, null))
